# python-compendium

./: .bumpversion.cfg  .flake8  .isort.cfg  .mypy.ini  .pydocstyle  .travis.yml  404.html  CODEOWNERS  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  settings.toml  sitemap.xml  tasks.py
.github/workflows/: ci.yml  docs.yml
cache/: index.html
compendium/: __init__.py  __main__.py  __version__.py  cache.py  cli.py  config_manager.py  environment.py  exceptions.py  filepaths.py  filetree.py  filetypes_base.py  loader.py  paths.py  query.py  settings.py
compendium/config/: __init__.py  config_base.py  json.py  loader.py  paths.py  yaml.py
compendium/config/filetypes/: __init__.py  json.py  toml.py  xml.py  yaml.py
compendium/configs/: __init__.py  config_base.py  ini.py  json.py  template.py  toml.py  yaml.py
compendium/drivers/: __init__.py  config_base.py  ini.py  json.py  template.py  toml.py  yaml.py
compendium/filetypes/: ini.py  json.py  toml.py  xml.py  yaml.py
compendium/utils/: __init__.py  logger.py  module.py  plugin.py
configuration/: index.html
development/cache/: index.html
development/config/config_base/: index.html
development/config/filetypes/json/: index.html
development/config/filetypes/toml/: index.html
development/config/filetypes/xml/: index.html
development/config/filetypes/yaml/: index.html
development/config/loader/: index.html
development/config/paths/: index.html
development/config_base/: index.html
development/config_manager/: index.html
development/filetypes/json/: index.html
development/filetypes/toml/: index.html
development/filetypes/xml/: index.html
development/filetypes/yaml/: index.html
development/filetypes_base/: index.html
development/loader/: index.html
development/paths/: index.html
development/settings/: index.html
docs/: cache.md  configuration.md  index.md  schema.md  settings.md
docs/api/: settings.md
docs/development/: cache.md  config_base.md  config_manager.md  filetypes.md  filetypes_base.md  loader.md  settings.md
docs/development/config/: loader.md
docs/development/config/filetypes/: toml.md  xml.md  yaml.md
docs/development/filetypes/: json.md  toml.md  xml.md  yaml.md
examples/: basic.py  env.md  env.py  example-out.yaml  example.yaml  nested_env.py  out.yaml  proman.py  settings.md  settings.py
examples/basic/: basic.py  out.json
examples/config_file/: check.py  config_file.py  in.toml  out.json  out.toml  out.yaml
examples/config_manager/: config1.toml  config1.yaml  config2.toml  config_manager.py  example-out.yaml  example.yaml  multiconfig.py  read_write.py  simple.py  workflow_two.yaml
examples/config_manager/prototyping/: config1.toml  config2.toml  multiconfig.py  prototype.py  read_write.py  simple.py
examples/data_classes/hierarchial/: config_file.py
examples/data_classes/simple/: example_config.py
examples/dataclass/simple/: example-out.yaml  example_config.py
examples/dataclasses/: config_file.py  example-out.yaml  example_config.py
examples/dot_config/: config.py
examples/hidden/: __init__.py  config.py
examples/nested/: __init__.py
examples/nested/proman/: pyproject.toml
examples/nested/proman/module1/submodule1/: pyproject.toml
examples/nested/proman/module1/submodule2/: pyproject.toml
examples/nested/proman/module2/: pyproject.toml
examples/proman/module1/: proman-lock.json  pyproject.toml
examples/proman/module1/submodule2/: pyproject.toml
examples/tree/: __init__.py  node.toml  tree.py
examples/tree/berry/: node.toml
examples/tree/dry/: node.toml
examples/tree/dry/dehiscent/: node.toml
examples/tree/dry/indehiscent/: node.toml
examples/tree/succulant/: node.toml
examples/tree/succulant/berry/: node.toml
examples/tree/succulant/berry/hesperidium/: node.toml
examples/tree/succulant/drupe/: node.toml
examples/tree/succulant/pome/: node.toml
examples/types/: config.toml  config_file.py
schema/: index.html
search/: search_index.json
settings/: index.html
src/compendium/: __init__.py  config_manager.py  exceptions.py  filepaths.py  filetypes_base.py  loader.py  query.py  settings.py
src/compendium/filetypes/: __init__.py  ini.py  json.py  toml.py  xml.py  yaml.py
tasks/: __init__.py  build.py  doc.py  qa.py
tests/: __init__.py  settings.toml  test_config_manager.py  test_environment_settings.py  test_file_tree.py  test_filetree.py  test_json.py  test_settings.py  test_settings_cache.py  test_version.py
tests/filepaths/: test_filepaths.py  test_filepaths.py.bak
tests/filepaths/hierarchy/: local.toml  settings.toml  settings1.toml  settings2.toml  settings3.toml  test_hierarchy.py  tests.toml
tests/filepaths/nested/: fruit.toml  fruit1.toml  fruit2.toml  test_nested.py
tests/filepaths/tree/: fruit1.toml  test_tree.py
tests/files/: test.json
tests/git/: config  test_git.py.bak
tests/ini/: config.ini  test.ini  test_ini.py
tests/json/: test.json  test_json.py
tests/module/: settings.toml  test_module.py  test_module.py.bak
tests/toml/: test_toml.py
tests/xml/: config.xml  test_xml.py
tests/yaml/: test.yaml  test_yaml.py
