[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compendium"
version = "0.1.3-1"
description = "Simple layered configuraion tool"
authors = [{author="Jesse P. Johnson", email="jpj6652@gmail.com"}]
maintainers = [{author="Jesse P. Johnson", email="jpj6652@gmail.com"}]
requires-python = ">=3.6.2"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["configuration", "configuration management"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "ruamel.yaml>=0.16.10,<1",
    "anytree>=2.8.0,<3",
    # "dataclasses>=0.8,<1;python_version<3.7",
    "dpath>=2.0.1,<3",
    "tomlkit>=0.7.0,<1",
    # "jsonschema>=3.2.0,<4",
    # "xmlschema>=1.2.3,<2",
    # "yamale>=3.0.2,<4",
]

[project.optional-dependencies]
xml = ["xmltodict>=0.12.0,>1"]
dev = [
    "build",
    "proman-versioning>=0.1.1-beta.4",
    "invoke>=1.4.1,<2",
    "pytest>=6.2,<8",
    "pyfakefs>=4.0.2,<5",
    "pytest-cov>=2.9.0,<3",
    "isort[pyproject]>=4.3.21,<5",
    "black>=19.10b0",
    "flake8>=3.8.2,<4",
    "bandit>=1.6.2",
    "safety>=1.9.0,<2",
    "mypy>=0.910",
    "mypy-extensions>=0.4.3",
]
docs = [
    "mkdocs>=1.1.2,<2",
    "pydocstyle[toml]>=6.1.1,<7",
    "mkdocstrings>=0.12.1,<1",
    "mkdocs-material>=7.1.2,<8",
    "docstr-coverage>=1.2.0,<2",
]

[project.urls]
homepage = "https://github.com/kuwv/python-compendium"
documentation = "https://kuwv.github.io/python-compendium"

[tool.proman.versioning]
[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[[tool.proman.versioning.files]]
filepath = "src/compendium/__init__.py"
pattern = "__version__ = '${version}'"

[[tool.proman.versioning.files]]
filepath = "tests/test_version.py"
pattern = "__version__ == '${version}'"

[tool.pydocstyle]
ignore = [
    "D203",
    "D213",
    "D300"
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | _build
    | build
    | dist
  )
)
'''

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
